<resources>
    <string name="app_name">TP03_SOWA_KILLIAN</string>
    <string name="no">Non</string>
    <string name="name">Nom</string>
    <string name="the_neighbor_has_not_been_deleted">Le voisin n\'a pas été supprimé</string>
    <string name="save">Enregistrer</string>
    <string name="confirmation">Confirmation</string>
    <string name="want_you_to_delete_neighbor">Voulez-vous supprimer ce voisin ?</string>
    <string name="neighbor_has_not_been_deleted">Le voisin n\'a pas été supprimé</string>
    <string name="neighbor_has_been_added">Le voisin a été ajouté</string>
    <string name="phone">Téléphone</string>
    <string name="website">Site web</string>
    <string name="address">Adresse</string>
    <string name="about">A propos</string>
    <string name="neighbor_list">Liste des voisins</string>
    <string name="new_neighbor">Nouveau voisin</string>
    <string name="image">Image</string>
    <string name="required_field">Champs requis</string>
    <string name="invalid_url">URL invalide</string>
    <string name="invalid_phone_number">Numéro invalide</string>
    <string name="invalid_email">Email invalide</string>
    <string name="maximum_30_characters">30 charactères maximum</string>
    <string name="add_to_favourite">Ajouter aux favori</string>
    <string name="remove_to_favourite">Retirer des favoris</string>
    <string name="fake_text_to_complete_with_real_bio">Fake text to complete with real bio</string>
    <string name="fake_name">Fake name</string>
    <string name="www_fakewebsite_com">www.fakewebsite.com</string>
    <string name="fakeemail_gmail_com">fakeemail@gmail.com</string>
    <string name="_0646540556">0646540556</string>
    <string name="test">Retirer des favoris</string>
    <string name="neighbor_details">Détail du voisin</string>
    <string name="mail_address">Addresse mail</string>
    <string name="db_datas">Données de la DB</string>
    <string name="memory_datas">Données en mémoire</string>
</resources>
