<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            >

            <ImageView
                android:id="@+id/profilePhotoIv"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profilePhotoIv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="23sp"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/fake_name"
                />

            <TextView
                android:id="@+id/websiteTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/nameTv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/www_fakewebsite_com"
                />

            <Button
                android:id="@+id/addFavoriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_favourite"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/websiteTv"
                />

            <TextView
                android:id="@+id/aboutTv"
                android:layout_width="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/addFavoriteButton"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/fake_text_to_complete_with_real_bio"
                />

            <TextView
                android:id="@+id/addressTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/aboutTv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/fakeemail_gmail_com"
                />

            <TextView
                android:id="@+id/phoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/addressTv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/_0646540556"
                android:textColor="@color/colorPrimaryDark"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>






</androidx.constraintlayout.widget.ConstraintLayout>